deploy/deployment.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: cm2metric

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cm2metric
  labels:
    app: cm2metric
  namespace: cm2metric
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cm2metric
  template:
    metadata:
      labels:
        app: cm2metric
    spec:
      containers:
        - name: cm2metric
          image: registry1.lab-1.cloud.local/cm2metric:v0.0.6
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: cm2metric
  labels:
    app: cm2metric
  namespace: cm2metric
spec:
  selector:
    app: cm2metric
  ports:
  - protocol: TCP
    name: http
    port: 8081
    targetPort: 8081

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cm2metric
  namespace: cm2metric
spec:
  rules:
    - host: "cm2metric.apps.lab-1.cloud.local"
      http:
        paths:
          - path: /
            backend:
              serviceName: cm2metric
              servicePort: 8081
  tls:
    - hosts:
      - "cm2metric.apps.lab-1.cloud.local"
